--- a/MMU_UniversityManager/pom.xml
+++ b/MMU_UniversityManager/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>wabri</groupId>
-  <artifactId>MMU_UniversityManager</artifactId>
+  <artifactId>MMU_PayRoll</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>MMU_UniversityManager</name>
+  <name>MMU_PayRoll</name>
   <url>http://maven.apache.org</url>
 
   <properties>
