--- a/MMU_UniversityManager/pom.xml
+++ b/MMU_UniversityManager/pom.xml
@@ -24,6 +24,11 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.pitest</groupId>
+				<artifactId>pitest-maven</artifactId>
+				<version>1.1.10</version>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
