--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 # skip installation step
 install: true
 script:
- - mvn -f MMU_UniversityManager/pom.xml clean verify -Pjacoco-report coveralls:report
+ - mvn -f MMU_UniversityManager/pom.xml clean verify -Pjacoco-report
 cache:
   directories:
   - $HOME/.m2
