--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,12 @@ language: java
 install: true	
 
 script:
-- mvn -f MMU_UniversityManager/pom.xml clean verify -Pjacoco-report coveralls:report
+- if ["$WITH_COVERALLS" == "true" ];
+  then 
+     mvn -f MMU_UniversityManager/pom.xml clean verify -Pjacoco-report coveralls:report;
+  else
+     mvn -f MMU_UniversityManager/pom.xml clean verify;
+  fi
 
 cache:
 directories:
