--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,19 @@ cache:
 directories:
 - $HOME/.m2
 
-jdk:
-- oraclejdk8
-- oraclejdk7
-- openjdk8
-
 matrix:
 fast_finish: true
 include:
 - jdk: oraclejdk8
 env: WITH_COVERALLS=true
 - jdk: oraclejdk7
+env: WITH_COVERALLS=false
 - jdk: openjdk6
+
+jdk:
+- oraclejdk8
+- oraclejdk7
+- openjdk8
 
 script:
 - if ["$WITH_COVERALLS" == "true" ];
