--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ directories:
 matrix:
 fast_finish: true
 include:
-- jdk: oraclejdk8
-env: WITH_COVERALLS=true
+- jdk: oraclejdk8 
+  env: WITH_COVERALLS=true
 - jdk: oraclejdk7
+  env: WITH_COVERALLS=false
 - jdk: openjdk6
