--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,6 @@ matrix:
 fast_finish: true
 include:
 - jdk: oraclejdk8 
-  env: WITH_COVERALLS=true
+  env: $WITH_COVERALLS=true
 - jdk: oraclejdk7
-  env: WITH_COVERALLS=false
 - jdk: openjdk6
