--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,28 @@
 language: java
 # skip installation step
-
 install: true
 
 script:
-- if [ "$WITH_COVERALLS" == "true" ];
-then 
-mvn -f MMU_UniversityManager/pom.xml clean verify -Pjacoco-report coveralls:report;
-else
-mvn -f MMU_UniversityManager/pom.xml clean verify;
-fi
+ - if [ "$WITH_COVERALLS" == "true" ];
+   then
+     mvn -f MMU_UniversityManager/pom.xml clean verify -Pjacoco-report coveralls:report;
+   else
+     mvn -f MMU_UniversityManager/pom.xml clean verify;
+   fi
+
+jdk:
+  - oraclejdk8
+  - oraclejdk7
+  - openjdk6
+
+matrix:
+  fast_finish: true
+  include:
+    - jdk: oraclejdk8
+      env: WITH_COVERALLS=true
+    - jdk: oraclejdk7
+    - jdk: openjdk6
 
 cache:
 directories:
 - $HOME/.m2
-
-matrix:
-fast_finish: true
-include:
-- jdk: oraclejdk8 
-  env: WITH_COVERALLS=true
-- jdk: oraclejdk7
-- jdk: openjdk6
