--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ matrix:
     - jdk: oraclejdk8
       env: WITH_COVERALLS=true
     - jdk: oraclejdk7
+      env: WITH_COVERALLS=false
     - jdk: openjdk6
       env: WITH_COVERALLS=false
 
