created maybe the right script on travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
       env: WITH_COVERALLS=false
 
 script:
- - if [ "$WITH_COVERALLS" == "true" ] then mvn -f MMU_UniversityManager/pom.xml clean verify -Pjacoco-report coveralls:report else mvn -f MMU_UniversityManager/pom.xml clean verify fi
+ - if [ "$WITH_COVERALLS" == "true" ]; then mvn -f MMU_UniversityManager/pom.xml clean verify -Pjacoco-report coveralls:report; else mvn -f MMU_UniversityManager/pom.xml clean verify; fi
 
 cache:
 directories:
