--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
     - jdk: openjdk6
 
 script:
- - if [ "$WITH_COVERALLS" == "true" ]; then mvn -f MMU_UniversityManager/pom.xml clean verify -Pjacoco-report coveralls:report; else mvn -f MMU_UniversityManager/pom.xml clean verify; fi
+ - if [ "$WITH_COVERALLS" == "true" ]; then; mvn -f MMU_UniversityManager/pom.xml clean verify -Pjacoco-report coveralls:report; else; mvn -f MMU_UniversityManager/pom.xml clean verify; fi;
 
 cache:
 directories:
