--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,18 @@ language: java
 # skip installation step
 install: true
 
+cache:
+directories:
+- $HOME/.m2
+
+script:
+ - if [ "$WITH_COVERALLS" == "true" ]; 
+   then 
+    mvn -f MMU_UniversityManager/pom.xml clean verify -Pjacoco-report coveralls:report; 
+   else 
+    mvn -f MMU_UniversityManager/pom.xml clean verify; 
+   fi
+
 matrix:
   fast_finish: true
   include:
@@ -9,10 +21,3 @@ matrix:
     - jdk: openjdk6
     - jdk: oraclejdk8
       env: WITH_COVERALLS=true
-
-script:
- - if [ "$WITH_COVERALLS" == "true" ]; then mvn -f MMU_UniversityManager/pom.xml clean verify -Pjacoco-report coveralls:report; else mvn -f MMU_UniversityManager/pom.xml clean verify; fi
-
-cache:
-directories:
-- $HOME/.m2
