--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ matrix:
   fast_finish: true
   include:
     - jdk: oraclejdk7
+      env: WITH_COVERALLS=true
     - jdk: openjdk6
+      env: WITH_COVERALLS=true
     - jdk: oraclejdk8
       env: WITH_COVERALLS=true
