--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ matrix:
   fast_finish: true
   include:
     - jdk: oraclejdk7
-      env: WITH_COVERALLS=true
+      env: WITH_COVERALLS=false
     - jdk: openjdk6
-      env: WITH_COVERALLS=true
+      env: WITH_COVERALLS=false
     - jdk: oraclejdk8
       env: WITH_COVERALLS=true
