--- a/MMU_UniversityManager/pom.xml
+++ b/MMU_UniversityManager/pom.xml
@@ -131,5 +131,10 @@
 			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.14.3</version>
+		</dependency>
 	</dependencies>
 </project>
