--- a/MMU_UniversityManager/pom.xml
+++ b/MMU_UniversityManager/pom.xml
@@ -136,5 +136,11 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.14.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.fakemongo</groupId>
+			<artifactId>fongo</artifactId>
+			<version>1.6.8</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
