--- a/MMU_UniversityManager/pom.xml
+++ b/MMU_UniversityManager/pom.xml
@@ -142,5 +142,10 @@
 			<version>1.6.8</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.11</version>
+		</dependency>
 	</dependencies>
 </project>
