--- a/MMU_UniversityManager/pom.xml
+++ b/MMU_UniversityManager/pom.xml
@@ -147,5 +147,10 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.1.11</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jongo</groupId>
+			<artifactId>jongo</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 	</dependencies>
 </project>
